feat: refactoring, adding xRequestId and xCorrelationid as mandatory parameter (this is a breaking change)
