# src/main/kotlin/tech/pacifici/patronus/controller/PatronusPostControllerApi.kt
@@ -1,19 +1,14 @@
 package tech.pacifici.patronus.controller
 
-import io.swagger.v3.oas.annotations.Parameter
-import jakarta.validation.Valid
 import org.springframework.http.HttpStatus
 import org.springframework.http.ResponseEntity
-import org.springframework.web.bind.annotation.PathVariable
-import org.springframework.web.bind.annotation.RequestBody
 import org.springframework.web.bind.annotation.RestController
 import tech.pacifici.patronus.api.PatronusPostsApi
 import tech.pacifici.patronus.model.CommentRequest
 import tech.pacifici.patronus.model.CommentResponse
-import tech.pacifici.patronus.model.FriendshipResponse
-import tech.pacifici.patronus.model.FriendshipUpdateRequest
 import tech.pacifici.patronus.model.PostRequest
 import tech.pacifici.patronus.model.PostResponse
+import java.util.UUID
 
 /**
  * REST controller implementation for the Patronus API.
@@ -24,13 +19,17 @@ import tech.pacifici.patronus.model.PostResponse
 class PatronusPostControllerApi : PatronusPostsApi {
     /**
      * Creates a new comment.
-     *
+     * @param id The Id of the comment
+     * @param xRequestId The x-request-id of the call
+     * @param xCorrelationId The correlation Id associated to the flow o calls
      * @param commentRequest The request body containing the details of the comment to create.
      * @return A [ResponseEntity] containing the created [CommentResponse] and HTTP status.
      */
     override fun createComment(
-        @Parameter(description = "", required = true) @PathVariable("id") id: java.util.UUID,
-        @Parameter(description = "", required = true) @Valid @RequestBody commentRequest: CommentRequest,
+        id: UUID,
+        xRequestId: UUID,
+        xCorrelationId: UUID,
+        commentRequest: CommentRequest,
     ): ResponseEntity<CommentResponse> {
         // TODO: implement the logic here
         return ResponseEntity(HttpStatus.NOT_IMPLEMENTED)
@@ -39,10 +38,16 @@ class PatronusPostControllerApi : PatronusPostsApi {
     /**
      * Creates a new post.
      *
+     * @param xRequestId The x-request-id of the call
+     * @param xCorrelationId The correlation Id associated to the flow o calls
      * @param postRequest The request body containing the details of the post to create.
      * @return A [ResponseEntity] containing the created [PostResponse] and HTTP status.
      */
-    override fun createPost(postRequest: PostRequest): ResponseEntity<PostResponse> {
+    override fun createPost(
+        xRequestId: UUID,
+        xCorrelationId: UUID,
+        postRequest: PostRequest,
+    ): ResponseEntity<PostResponse> {
         // TODO: Implement your business logic here
         return ResponseEntity(HttpStatus.NOT_IMPLEMENTED)
     }
@@ -51,9 +56,15 @@ class PatronusPostControllerApi : PatronusPostsApi {
      * Deletes a post by its ID.
      *
      * @param id The ID of the post to delete.
+     * @param xRequestId The x-request-id of the call
+     * @param xCorrelationId The correlation Id associated to the flow o calls
      * @return A [ResponseEntity] with HTTP status indicating the result of the operation.
      */
-    override fun deletePostById(id: java.util.UUID): ResponseEntity<Unit> {
+    override fun deletePostById(
+        id: UUID,
+        xRequestId: UUID,
+        xCorrelationId: UUID,
+    ): ResponseEntity<Unit> {
         // TODO: Implement your business logic here
         return ResponseEntity(HttpStatus.NOT_IMPLEMENTED)
     }
@@ -62,9 +73,15 @@ class PatronusPostControllerApi : PatronusPostsApi {
      * Retrieves a post by its ID.
      *
      * @param id The ID of the post to retrieve.
+     * @param xRequestId The x-request-id of the call
+     * @param xCorrelationId The correlation Id associated to the flow o calls
      * @return A [ResponseEntity] containing the [PostResponse] and HTTP status.
      */
-    override fun getPostById(id: java.util.UUID): ResponseEntity<PostResponse> {
+    override fun getPostById(
+        id: UUID,
+        xRequestId: UUID,
+        xCorrelationId: UUID,
+    ): ResponseEntity<PostResponse> {
         // TODO: Implement your business logic here
         return ResponseEntity(HttpStatus.NOT_IMPLEMENTED)
     }
@@ -72,24 +89,31 @@ class PatronusPostControllerApi : PatronusPostsApi {
     /**
      * Retrieves all posts.
      *
+     * @param xRequestId The x-request-id of the call
+     * @param xCorrelationId The correlation Id associated to the flow o calls
      * @return A [ResponseEntity] containing a list of [PostResponse] and HTTP status.
      */
-    override fun getPosts(): ResponseEntity<List<PostResponse>> {
+    override fun getPosts(
+        xRequestId: UUID,
+        xCorrelationId: UUID,
+    ): ResponseEntity<List<PostResponse>> {
         // TODO: Implement your business logic here
         return ResponseEntity(HttpStatus.NOT_IMPLEMENTED)
     }
-
-
 
     /**
      * Updates a post by its ID.
      *
      * @param id The ID of the post to update.
+     * @param xRequestId The x-request-id of the call
+     * @param xCorrelationId The correlation Id associated to the flow o calls
      * @param postRequest The request body containing the updated details of the post.
      * @return A [ResponseEntity] containing the updated [PostResponse] and HTTP status.
      */
     override fun updatePostById(
-        id: java.util.UUID,
+        id: UUID,
+        xRequestId: UUID,
+        xCorrelationId: UUID,
         postRequest: PostRequest,
     ): ResponseEntity<PostResponse> {
         // TODO: Implement your business logic here
